syntax = "proto3";

package demo;
option go_package = "github.com/awslabs/aws-glue-schema-registry/native-schema-registry/GolangDemoGSRKafka/pkg/proto";

import "google/protobuf/timestamp.proto";

message Order {
  int64 id = 1;
  int64 user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  OrderStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
}

message OrderItem {
  int64 product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double unit_price = 4;
}

enum OrderStatus {
  PENDING = 0;
  CONFIRMED = 1;
  SHIPPED = 2;
  DELIVERED = 3;
  CANCELLED = 4;
}
